fix: interpolate max-width gap values in calc

--- a/packages/level/src/_level.scss
+++ b/packages/level/src/_level.scss
@@ -13,6 +13,6 @@
 
   > * {
     flex: 0 0 auto;
-    max-width: calc(100% - var.$gap);
+    max-width: calc(100% - #{var.$gap});
   }
 }
