--- a/packages/level/src/_level_gap.scss
+++ b/packages/level/src/_level_gap.scss
@@ -10,7 +10,7 @@ $_v: var.$prefix-modifier-value;
     @include core.flex-gap($value);
 
     > * {
-      max-width: calc(100% - $value);
+      max-width: calc(100% - #{$value});
     }
   }
 
@@ -18,7 +18,7 @@ $_v: var.$prefix-modifier-value;
     @include core.flex-gap($value, 'x');
 
     > * {
-      max-width: calc(100% - $value);
+      max-width: calc(100% - #{$value});
     }
   }
 
